Remove -XX:+AggressiveOpts from default JVM args so they work with JDK13, see gatling/gatling#3807