@@ -37,8 +37,7 @@ public final class MojoConstants {
             "-server", "-Xmx1G",
             "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=30", "-XX:G1HeapRegionSize=16m", "-XX:InitiatingHeapOccupancyPercent=75",
             "-XX:+ParallelRefProcEnabled", "-XX:+PerfDisableSharedMem",
-            "-XX:+AggressiveOpts", "-XX:+OptimizeStringConcat",
-            "-XX:+HeapDumpOnOutOfMemoryError",
+            "-XX:+OptimizeStringConcat", "-XX:+HeapDumpOnOutOfMemoryError",
             "-Djava.net.preferIPv4Stack=true", "-Djava.net.preferIPv6Addresses=false"
     );
 }
